[package]
name = "with_sctk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2.5"
pretty_env_logger = "0.4.0"
raw-window-handle = "0.5.0"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git", rev="beefe0a7078727654af48484e03bdfd19dfff8f3" }
vello = { path = "../../", features = ["buffer_labels"] }
wayland-backend = { version = "0.1.0", features = ["client_system"] }
wayland-client = "0.30.0"
